# PerfSight

./: .gitignore  README.md  dev_mac.sh  dev_win.ps1  explore_cdp.py  mac_mem_by_pid.py  setup_perfsight.py  verify_psutil.py  verify_single_pid.py
.github/workflows/: release.yml
docs/: build.md  chrome_extension_api.md  chromeos-native-profiler-design.md  dev-plan.md  guide.md  perfsight-2.0.md  perfsight-client-progress.md  perfsight-server-design.md  perfsight-server-dev-plan.md  perfsight-server-progress.md  system-arch.md
perf-sight/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
perf-sight-extension/: background.js  content.js  inject.js  manifest.json
perf-sight/scripts/: kill_ports.mjs  kill_process.mjs
perf-sight/src/: App.tsx  index.css  main.tsx  theme.tsx
perf-sight/src-tauri/: Cargo.toml  gen_icon.py  tauri.conf.json
perf-sight/src-tauri/capabilities/: default.json
perf-sight/src-tauri/icons/: icon.icns
perf-sight/src-tauri/python/: build_sidecar.py  collector.py  collector.spec  requirements.txt
perf-sight/src-tauri/src/: analysis.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  ws_server.rs
perf-sight/src-tauri/src/collector/: cdp.rs  mod.rs
perf-sight/src/components/: Charts.tsx  LogMetricSettings.tsx  ProcessList.tsx
perf-sight/src/pages/: ComparisonDetail.tsx  Comparisons.tsx  (+6 more)
perfsight-server/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
perfsight-server/prisma/: schema.prisma
perfsight-server/public/: index.html
perfsight-server/src/: db.ts  index.ts
(+3 files in other folders)
