
[package]
name = "perf-sight"
version = "0.1.0"
description = "PerfSight Native Client"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0-rc.10", features = [] }

[dependencies]
tauri = { version = "^2.0.0-rc.10", features = [] }
tauri-plugin-shell = "^2.0.0-rc.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.13" 
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } 
rusqlite = { version = "0.37.0", features = ["bundled"] }
tungstenite = "0.28.0"
url = "2.5.7"
